# cmake-hybrid-example

./: CMakeLists.txt  README.md
src/: c.f90  d.f90  main.f90
